# HoudiniMMD

./: CMakeLists.txt  Template_linux_cmake_config.sh  Template_win_cmake_config.bat
SOP_MMDBoneDeform/: CMakeLists.txt
SOP_MMDBoneDeform/src/: SOP_MMDBoneDeform.C  SOP_MMDBoneDeform.h
SOP_Pmx/: CMakeLists.txt
SOP_Pmx/src/: SOP_Pmx.C  SOP_Pmx.h  SOP_common.h
SOP_Vmd/: CMakeLists.txt
SOP_Vmd/src/: SOP_Vmd.C  SOP_Vmd.h  SOP_common.h
SOP_VmdFile/: CMakeLists.txt
SOP_VmdFile/src/: SOP_VmdFile.C  SOP_VmdFile.h  SOP_common.h
Script/: script_4_get_ds.py
cmake/: HUtils.cmake
packages_manifest/: ysyHDKtest.json
